# moksha-modules-extra

./: .gitignore  README.md  more-mods.sh
emprint/: configure.ac
emprint/data/images/: Makefile.am
mail/: Makefile.am  configure.ac  mail.edc  module.desktop.in
mail/debian/: changelog  control  copyright  files  moksha-module-mail.lintian-overrides
mail/images/: Makefile.am
mail/po/: LINGUAS  be.po  bg.po  el.po  eo.po  es.po  fi.po  fr.po  gl.po  he.po  it.po  ja.po  lt.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  tr.po  zh_CN.po
mail/src/: Makefile.am  e_mod_config.c  e_mod_main.c  e_mod_main.h  imap.c  mbox.c  mdir.c  pop.c
mem/: configure.ac  mem.edc  module.desktop.in
mem/debian/: changelog  control  copyright  files  moksha-module-mem.lintian-overrides  rules
mem/po/: be.po  de.po  el.po  fi.po  hr.po  it.po  lt.po  pl.po  pt_BR.po  ru.po  sl.po  sv.po  tr.po  uk.po  zh_CN.po
mem/src/: Makefile.am  e_mod_config.c  e_mod_main.c  e_mod_main.h
modules/calendar/: AUTHORS  configure.ac  meson.build  meson_options.txt  module.desktop  module.desktop.in
modules/calendar/po/: LINGUAS  ar.po  be.po  bg.po  bs.po  calendar.pot  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  fi.po  fr.po  he.po  hi.po  hr.po  hu.po  it.po  ja.po  km.po  ko.po  lt.po  meson.build  mr.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  th.po  tr.po  uk.po  zh_CN.po
modules/calendar/src/: Makefile.am  e_mod_main.c  e_mod_main.h  meson.build
modules/echievements/: COPYING  ChangeLog  Makefile.in  NEWS  README  aclocal.m4  configure.ac  e_modules-echievements.spec.in
modules/echievements/po/: de.gmo  de.po  echievements.pot  ru.gmo  ru.po
modules/echievements/src/: Makefile.in  e_mod_main.h  echievements.c
modules/engage/src/: e_mod_main.c  e_mod_main.h  meson.build  ng_border_menu.c  ng_box.c  ng_config.c  ng_config_instances.c  ng_gadcon.c  ng_item.c  ng_launcher.c  ng_taskbar.c
modules/mail/: AUTHORS  configure.ac  e-module-mail.edc  meson.build  meson_options.txt  module.desktop  module.desktop.in
modules/mail/images/: Makefile.am
modules/mail/po/: LINGUAS  ar.po  be.po  bg.po  cs.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  it.po  ja.po  lt.po  mail.pot  mr.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  th.po  tr.po  uk.po  zh_CN.po
modules/mail/src/: e_mod_config_box.c  e_mod_main.c  e_mod_main.h  imap2.c  mbox.c  meson.build  pop.c  pop.h
modules/news/: AUTHORS  INSTALL  README  TODO  aclocal.m4  configure  configure.ac  meson.build  module.desktop  module.desktop.in
modules/news/data/: meson.build
modules/news/po/: LINGUAS  ar.po  be.po  bg.po  cs.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  it.po  ja.po  mr.po  news.pot  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  tr.po  uk.po  zh_CN.po
modules/news/src/: e_mod_main.c  e_mod_main.h  meson.build  news_config_dialog.c  news_config_dialog_category.c  news_config_dialog_feed.c  news_config_dialog_feeds.c  news_config_dialog_item.c  news_config_dialog_langs.c  news_feed.c  news_feed.h  news_item.c  news_item.h  news_menu.c  news_menu.h  news_parse.c  news_popup.c  news_popup.h  news_theme.c  news_utils.c  news_utils.h  news_viewer.c
modules/penguins/: README  ToDo  configure.ac  meson.build  module.desktop  module.desktop.in
modules/penguins/po/: LINGUAS  ar.po  be.po  bg.po  cs.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  he.po  hr.po  hu.po  it.po  ja.po  lt.po  mr.po  nl.po  penguins.pot  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  tr.po  uk.po  zh_CN.po
modules/penguins/src/: e_mod_config.c  e_mod_main.c  e_mod_main.h
modules/penguins/themes/: meson.build
modules/photo/: .gitignore  AUTHORS  INSTALL  README  TODO  configure.ac  e-module-photo.edc  meson.build  meson_options.txt  module.desktop  module.desktop.in
modules/photo/data/: meson.build
modules/photo/m4/: ac_attribute.m4
modules/photo/po/: LINGUAS  ar.po  be.po  bg.po  cs.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  it.po  lt.po  mr.po  nl.po  photo.pot  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  tr.po  uk.po  zh_CN.po
modules/photo/src/: e_mod_main.c  e_mod_main.h  meson.build  photo_config.c  photo_config.h  photo_config_dialog.c  photo_config_dialog.h  photo_config_dialog_dir.c  photo_config_dialog_item.c  photo_item.c  photo_menu.c  photo_picture.c  photo_picture.h  (+6 more)
modules/screenshot/: README  meson.build  module.desktop  module.desktop.in
obsolete/echievements/: AUTHORS  Makefile.am  README  configure  e-module-echievements.edc  module.desktop.in
places/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  e-module-places.edc  module.desktop.in
places/autom4te.cache/: output.0  requests  traces.0
places/debian/: README.source  changelog  control  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  places-e17.cron.d.ex  places-e17.default.ex  places-e17.doc-base.EX  places-e17.substvars  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
places/po/: LINGUAS  ar.gmo  ar.po  ar.po~  ca.gmo  ca.po  ca.po~  cs.po~  de.po  de.po~  el.gmo  el.po  el.po~  eo.gmo  eo.po  eo.po~  es.gmo  es.po  es.po~  fr.po  fr.po~  gl.gmo  gl.po  gl.po~  hr.po  hr.po~  hu.gmo  hu.po  hu.po~  it.gmo  it.po  it.po~  lt.po  lt.po~  nl.po  nl.po~  pl.po  pl.po~  places.pot  pt.po  (+18 more)
places/src/: Makefile.am  Makefile.in  e_mod_eeze.c  e_mod_main.c  e_mod_main.h  e_mod_places.c  e_mod_places.h  e_mod_udisks.c
trash/: Makefile.am  configure.ac  e-module-trash.edc  module.desktop.in
trash/.svn/: wc.db
trash/debian/: changelog  control  copyright  moksha-module-trash.lintian-overrides
trash/po/: LINGUAS  be.po  fr.po  nl.po  pt.po  sk.po  sl.po
trash/src/: Makefile.am  e_mod_config.c  e_mod_main.c  e_mod_main.h
winselector/: configure.ac  e-module-winselector.edc  module.desktop.in
winselector/debian/: AAA_readme  changelog  control  copyright  files  moksha-module-winselector.lintian-overrides
winselector/src/: e_mod_main.c
(+1484 files in other folders)
