option('edje-cc',
       type       : 'string',
       description: 'A path to a edje_cc. Defaults to system edje_cc')

option('nls',
       type: 'boolean',
       value: true,
       description: 'enable localization (default=true)')
       
option('enotify',
       type: 'boolean',
       value: true,
       description: 'enable notification (default=true)')
       
option('imap2',
       type: 'boolean',
       value: true,
       description: 'use IMAP2 (default=true)')
