option('edje-cc',
       type       : 'string',
       description: 'A path to a edje_cc. Defaults to system edje_cc')

option('nls',
       type: 'boolean',
       value: true,
       description: 'enable localization (default=true)')

option('photos',
       type       : 'string',
       description: 'Initial Photo folder, defaults to XDG_PICTURES_DIR')
