MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess config.h.in \
		       config.sub configure depcomp install-sh ltmain.sh \
		       missing INSTALL
IMG = rect.png

EXTRA_DIST = $(IMG)

imagedir = $(pkgdatadir)/images
image_DATA = $(IMG)

SND = Camera.wav

EXTRA_DIST += $(SND)

snddir = $(pkgdatadir)/images
snd_DATA = $(SND)
