feeds_install_dir = join_paths(meson.project_source_root(), 'images/feeds')
install_data([ 'afp.png',            'courrierinternational.png', 'freshmeat.png',
               'meneame.png',        'barrapunto.png',            'default.png',  
               'futurasciences.png', 'news.png',                  'bbcworld.png', 
               'digg.png',           'google_fr.png',             'osnews.png',
               'bouletcorp.png',     'e_cvs.png',                 'google.png',
               'slashdot.png',       'cnn.png',                   'e_fr.png'
             ], 
             install_dir: feeds_install_dir)
